[package]
name = "DooD-encryption-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
curve25519-dalek = "4.1.3"
ed25519-dalek = {version= "2.1.1", features=["rand_core"]}
hkdf = "0.12.4"
rand = "0.8.5"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
subtle = "2.6.1"
x25519-dalek = {version= "2.0.1", features= [ "static_secrets"]}
